# outlinefw

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: ADR-001-dynamic-prompt-architecture.md
src/outlinefw/: __init__.py  django_adapter.py  export.py  frameworks.py  generator.py  parser.py  schemas.py
src/outlinefw/knowledge/: __init__.py  client.py  enrichment.py  settings.py
tests/: conftest.py  test_async_generator.py  test_export.py  test_frameworks.py  test_knowledge.py  test_outlinefw.py  test_parser.py  test_registry.py
