[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iil-outlinefw"
version = "0.1.0"
description = "Zentrales Story-Outline-Framework fuer alle iil-Platform-Applikationen"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Achim Dehnert", email = "achim@dehnert.dev" },
]
keywords = ["story", "outline", "framework", "creative-writing", "iil-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
django = [
    "django>=4.2,<6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pydantic>=2.5,<3",
]
full = [
    "iil-outlinefw[django,dev]",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/outlinefw"
Repository = "https://github.com/achimdehnert/outlinefw"
Issues = "https://github.com/achimdehnert/outlinefw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/outlinefw"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["outlinefw"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["outlinefw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--tb=short"]

[tool.coverage.run]
source = ["src/outlinefw"]
omit = ["tests/*"]
