[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iil-outlinefw"
version = "0.3.2"
description = "Zentrales Story-Outline-Framework fuer alle iil-Platform-Applikationen"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Achim Dehnert", email = "achim@dehnert.dev" },
]
keywords = ["story", "outline", "framework", "creative-writing", "knowledge", "wiki", "iil-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
django = [
    "django>=4.2",
]
knowledge = [
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "tenacity>=8.0,<10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.9",
    "pydantic>=2.5,<3",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "tenacity>=8.0,<10.0",
]
full = [
    "iil-outlinefw[django,knowledge,dev]",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/outlinefw"
Repository = "https://github.com/achimdehnert/outlinefw"
Issues = "https://github.com/achimdehnert/outlinefw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/outlinefw"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["ANN101", "ANN102", "N818"]

[tool.ruff.lint.per-file-ignores]
# frameworks.py = Content-/Daten-Modul (lange deutsche Beschreibungstexte) — E501 hier toleriert
"src/outlinefw/frameworks.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["outlinefw"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["outlinefw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--tb=short"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/outlinefw"]
omit = ["tests/*"]
